# iris-emulator

./: .gitignore  AGENT_CHANGELOG.md  CMakeLists.txt  README.md  README.md.bak  actions().first()  addAction(tr(%1x Scale).arg(scale))  addMenu(m_ui.menuLoadState)  addMenu(m_ui.menuSaveState)  addMenu(m_ui.menuTVStandard)  addMenu(m_ui.menuWindowSize)  build_log.txt  diff_jag2.txt  diff_mainwin.txt  file_bom.txt  jag_8648.txt  jag_e13.txt  overview.json  overview_architecture.puml  setText(QStringLiteral(160x%1).arg(  setText(fi.completeBaseName())  temp_jag.cpp
.gemini/: 2600.md  instructions.md  jaguar.md  lynx.md
.github/agents/: Explore.agent.md  atari-lynx.agent.md  atari-precision.agent.md  fix-problems.agent.md  lynx-audio.agent.md  qt-ui.agent.md
.qwen/: settings.json
IRIS EMULATOR/: .gitignore
IRIS EMULATOR/src/: EmulatorCore.h  IEmulatorCore.h  MapperFactory.h  SDLInput.cpp
IRIS EMULATOR/src/lynx/: CPU65C02.cpp  LynxSystem.cpp
IRIS EMULATOR/src/mapper/: MapperE7.h  MapperF4.h  MapperFA.h
IRIS EMULATOR/src/ui/: ControllerSettingsDialog.h  DebugWindow.cpp
IRIS EMULATOR/tools/: build_cover_index.py
IRIS OLD Version TEST/: LICENSE  TODO.md  iris_emulator.rc
IRIS OLD Version TEST/src/: CPU6507.cpp  DiscordRPC.h  EmulatorCore.cpp  MapperFactory.cpp  TIA.cpp  TIA.h  main.cpp
IRIS OLD Version TEST/src/jaguar/: JaguarSystem.cpp  JaguarSystem.h  jaguar_gui_stubs.cpp
IRIS OLD Version TEST/src/lynx/: CPU65C02.h  LynxCart.h  LynxSystem.h  Mikey.h  Suzy.cpp
IRIS OLD Version TEST/src/mapper/: Mapper.h  Mapper3F.h  MapperBanked.cpp  MapperBanked.h  MapperF8.h  MapperFE.h  MapperNone.cpp  MapperSC.h
IRIS OLD Version TEST/src/ui/: CoverDownloadDialog.cpp  CoverDownloadDialog.h  DebugWindow.h  OverlayWidget.cpp  SettingsDialog.h  Themes.h
IRIS OLD Version TEST/tools/: gen_console_icons.py  generate_icons.py  requirements.txt  test_savestate.cpp
JAGUAR REFERENCE 1/: .gitignore
JAGUAR REFERENCE 1/docs/: README  TODO
JAGUAR REFERENCE 1/src/: dsp.cpp  jaguar.cpp  joystick.h  log.cpp  log.h
JAGUAR REFERENCE 1/src/debugger/: DBGManager.cpp  DWARFManager.h  allwatchbrowser.cpp  allwatchbrowser.h  debuggertab.h  heapallocatorbrowser.cpp  localbrowser.cpp
JAGUAR REFERENCE 1/src/gui/: configdialog.h  generaltab.h  mainwin.cpp
JAGUAR REFERENCE 1/src/m68000/: cpuextra.c  inlines.h
JAGUAR REFERENCE 2.0/: ReadMe.txt  jaguarcore.mak
JAGUAR REFERENCE 2.0/Scripts/: avp.bigpcvm  avp_mp.bigpcvm  breakout_2k.bigpcvm  brett_hull_hockey.bigpcvm  checkered_flag.bigpcvm  cybermorph.bigpcvm  doom.bigpcvm  hello_pussycat.bigpcvm  hello_pussycat.c  iron_soldier.bigpcvm  mc3d_vr.bigpcvm  myst.bigpcvm  raiden.bigpcvm  ratio_adjust.bigpcvm  t2k_rotary.bigpcvm  towers2.bigpcvm  turbo_joy.bigpcvm  unaligned_load_hack.bigpcvm  unaligned_load_hack.c  vidgrid.bigpcvm  wolf3d.bigpcvm
JAGUAR REFERENCE 2.0/Scripts/include/: bigp_shared.h  bigpcrt.h
JAGUAR REFERENCE 2.0/Strings/: strings_en.bigpfc  strings_en.txt
JAGUAR REFERENCE 2.0/src/: settings.h
JAGUAR REFERENCE 2.0/src/debugger/: localbrowser.h
JAGUAR REFERENCE 2.0/src/gui/: alpinetab.h
JAGUARCOREREFERENCE/Virtual-Jaguar-Rx-master/src/: file.cpp
Virtual-Jaguar-Rx-master/src/: eeprom.cpp  settings.cpp
Virtual-Jaguar-Rx-master/src/debugger/: DBGManager.h
build_release3/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_release3/Release/: publishers.txt
build_release3/irisemulator_autogen/: mocs_compilation_Release.cpp
build_release4/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_release4/irisemulator_autogen/: mocs_compilation_Release.cpp
build_release5/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_release5/test_savestate_autogen/: mocs_compilation_Release.cpp
build_release6/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_release6/irisemulator_autogen/: mocs_compilation_Release.cpp
build_release6/test_savestate_autogen/: mocs_compilation_Release.cpp
data/: mappers.json
src/: CPU6507.h  DiscordRPC.cpp  DiscordRPC.h  EmulatorCore.cpp  MapperFactory.cpp  RIOT.cpp  RIOT.h  SDLInput.cpp  SDLInput.h  SDLInput_Jaguar.cpp  main.cpp
src/audio/: VSTHost.cpp  VSTHost.h  dac_hook.h  vst3_iids.cpp
src/jaguar/: JagCompatDB.h  JaguarPatchDB.h  JaguarSafeWrite.h  JaguarSystem.cpp  JaguarSystem.h  dsp_dac_stubs.cpp  gelf.h  jagcore_stubs.cpp  jaguar_file_stub.cpp  jaguar_gui_stubs.cpp  jaguarcore_link_stubs.cpp  jaguarcore_stubs2.cpp  jaguarcore_stubs3.cpp  jaguarcore_stubs4.cpp  joystick_stub.cpp  libdwarf.h  libelf.h  tom.cpp  tom_utils.cpp  tom_utils.h
src/lynx/: LynxCart.cpp  LynxSystem.cpp  LynxSystem.h  Mikey.cpp  Suzy.h
src/mapper/: Mapper3E.h  MapperBanked.cpp  MapperE0.h  MapperE7.h  MapperF6.h  MapperNone.h
src/resources/icons/: resources.qrc
src/ui/: AboutDialog.cpp  ControllerSettingsDialog.cpp  DebugWindow.cpp  DisplayWidget.cpp  DisplayWidget.h  EmulatorLogWindow.cpp  EmulatorLogWindow.h  JaguarDebugWindow.cpp  JaguarDebugWindow.h  JaguarIntroWidget.cpp  JaguarIntroWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OverlayWidget.h  SettingsDialog.cpp  SettingsDialog.h  Themes.cpp  WelcomeDialog.cpp  WelcomeDialog.h
tools/: fetch_boxarts.py  gen_pause_icon.py  test_savestate.cpp
(+185 files in other folders)
